--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - run:
           name: Check Formatting
           command: |
+            rustup update
             rustup component add rustfmt
             cargo fmt -- --check
       - run:
