--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,7 @@ jobs:
       - run:
           name: Check Formatting
           command: |
-            rustup default stable
-            rustup component add rustfmt
+            rustup run rustup component add rustfmt
             cargo fmt -- --check
       - run:
           name: Unit Tests
