--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Check Formatting
           command: |
-            rustup run rustup component add rustfmt
+            rustup run stable rustup component add rustfmt
             cargo fmt -- --check
       - run:
           name: Unit Tests
