Try to re-enable cargo fmt check in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,8 @@ jobs:
       - run:
           name: Check Formatting
           command: |
-             ls
-#            rustup component add rustfmt
-#            cargo fmt -- --check
+            rustup component add rustfmt
+            cargo fmt -- --check
       - run:
           name: Unit Tests
           command: |
