--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,3 +10,4 @@ steps:
   args: ['beta', 'run', 'deploy', 'dragon', '--image', 'gcr.io/$_PROJECT_ID/dragon', '--region', 'us-central1']
 images:
 - gcr.io/$_PROJECT_ID/dragon
+timeout: 1000s
