--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ serde_derive = "1.0.86"
 r2d2-diesel = "1.0"
 r2d2 = "0.8"
 uuid = { version = "0.6", features = ["serde", "v4"] }
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["prepush-hook", "run-cargo-test", "run-cargo-fmt"]
