--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,16 @@ steps:
   args: ['push', 'gcr.io/$_PROJECT_ID/dragon']
   # Deploy container image to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['beta', 'run', 'deploy', 'rust-dragon-server', '--image', 'gcr.io/$_PROJECT_ID/dragon', '--region', 'us-central1']
+  args: [
+    'beta',
+    'run',
+    'deploy',
+    'rust-dragon-server',
+    '--image',
+    'gcr.io/$_PROJECT_ID/dragon',
+    '--region',
+    'us-central1'
+  ]
 images:
 - gcr.io/$_PROJECT_ID/dragon
 timeout: 2000s
