--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ uuid = { version = "0.6", features = ["serde", "v4"] }
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false # Disable features which are enabled by default
-features = ["prepush-hook", "run-cargo-test", "run-cargo-fmt"]
+features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test"]
