--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ uuid = { version = "0.6", features = ["serde", "v4"] }
 version = "1"
 default-features = false # Disable features which are enabled by default
 features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test"]
+features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test"]
