--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,5 @@ uuid = { version = "0.6", features = ["serde", "v4"] }
 
 [dev-dependencies.cargo-husky]
 version = "1"
-default-features = false # Disable features which are enabled by default
+default-features = false
 features = ["prepush-hook", "run-cargo-fmt", "run-cargo-test"]
-features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test"]
